Added some material to the literature review.

--- a/traffic_draft9.tex
+++ b/traffic_draft9.tex
@@ -235,7 +235,7 @@ Second, we must define a reasonable control group that could have received a red
 \section{Empirical Results}
 First, we must first confirm that E-ZPasses are associated with an increase in housing prices, but not associated with significant changes in socio-economic variables correlated with voting behaviors. In order to reduce the dimensionality of our difference-and-difference procedure, we temporarily ``fix'' our definition of treatment and control to what we would have initially viewed as reasonable.\footnote{These results are consistent for a range of ``inclusion'' and ``exclusion'' values; we fix these values for simplicity of the exposition.} Here, a precinct is in the treatment (or control) group so long as it is within 12 miles of an E-ZPass toll plaza (or the exit ramp of a non-E-ZPass highway), but more than 18 miles from the exit ramp of a non-E-ZPass highway (or an E-ZPass toll plaza). At these values, the estimated effects are not their maximum, but we are fairly confident that the values separate precincts into those where individuals regularly use E-ZPass roads and those where individuals do not. In the difference-in-difference, we compared the 2000 Census data with the 2009 Census data, which is an average of the period from 2006 to 2009. County-level fixed effects were used. 
 
-As expected, the E-ZPass introduction appeared to have sizable effects on property values. The percentage of homes worth \$150,000-300,000 went up by about 10 more percentage points in the E-ZPass group compared to the control group. In addition, the average housing price increased by about \$50,000 more in the E-ZPass group compared to the control group. Thus, this setting is ideal for testing our theoretical hypotheses, given how we predicted that individuals with moderate or high wealth should experience stronger anti-tax pressure in response to property value shocks (since they already receive comparatively less in redistribution). Taken together, these results indicate that, compared to similar communities near non-E-ZPass exits, areas that received E-ZPasses experienced a relative increase in housing prices.\footnote{Currie and Walker (2011) used E-ZPasses to study the effect of air pollution on infant health, and reported finding no change in housing prices after the introduction of E-ZPasses. Our study differs in key ways. First, Currie and Walker compare housings that are within 2 km of an E-ZPass plaza to those that are within 2-10 km. However, we make a comparison instead between precincts within $k$ km of an E-ZPass plaza to precincts that are similar on observable characteristics and that are within $k$ km of an exit on a non-E-ZPass highway. The time horizon of interest for our study is also longer.} 
+As expected, the E-ZPass introduction appeared to have sizable effects on property values. The percentage of homes worth \$150,000-300,000 went up by about 10 more percentage points in the E-ZPass group compared to the control group. In addition, the average housing price increased by about \$50,000 more in the E-ZPass group compared to the control group. Thus, this setting is ideal for testing our theoretical hypotheses, given how we predicted that individuals with moderate or high wealth should experience stronger anti-tax pressure in response to property value shocks (since they already receive comparatively less in redistribution). Taken together, these results indicate that, compared to similar communities near non-E-ZPass exits, areas that received E-ZPasses experienced a relative increase in housing prices.\footnote{Currie and Walker (2011) used E-ZPasses to study the effect of air pollution on infant health, and reported finding no change in housing prices after the introduction of E-ZPasses. Our study differs in key ways. First, Currie and Walker compare housing units in New Jersey that are within 2 km of an E-ZPass plaza to those that are within 2-10 km. However, we make a comparison instead between precincts in New Jersey and Pennsylvania within $k$ km of an E-ZPass plaza to precincts that are similar on observable characteristics and that are within $k$ km of an exit on a non-E-ZPass highway. In addition, even in Currie and Walker's New Jersey data, houses nearest to an E-ZPass plaza appear to be rising in value faster than those further from a plaza. The average change in sale price following the introduction of E-ZPass was $\$31,123$ for homes within $2$ km of E-ZPass, but was only $\$21,173$ for those greater than $2$ km from E-ZPass (but within $10$ km).} 
 
 We find that E-ZPass communities experienced relatively few other socio-economic changes. The next largest effect is found in public transportation use, where E-ZPass communties saw an 8 percentage point drop in public transportation use relative to the control group. E-ZPass communities became only slightly better educated (1 percentage point increase in percentage of individuals completing high school), and also wealthier (percentage of households with \$125,000 or above in income grew by a bit less than 1 percentage point). Overall, however, we find that by far the most significant changes in E-ZPass communities related to property values, which quickly increased. 
 
@@ -375,6 +375,9 @@ F Statistic & 37.710$^{*}$ (df = 1; 6147) & 11.757$^{*}$ (df = 56; 6092) \\
 \end{tabular} 
 \end{table}
 
+\subsection{Alternative explanations}
+In this exposition, we have emphasized the ways in which house price appreciation is relevant politically due to the tax burden implications of a positive wealth shock. With existing data, it is not possible to distinguish this mechanism from Ansell's insurance argument in which house price appreciation provides a form of privately provided insurance against income shocks. It is also possible, although in our view unlikely, that another mechanism is at work. Finkelstein (2009) argues that the electronic toll collection reduces the salience of the toll amount. As a result, Finkelstein argues in a theoretical model that tolls are ``20 to 40 percent higher than what they would have been without'' electronic collection (p. 969). It is possible that our observed rightward political shift stems in part from a reaction against this increased toll. However, this explanation would run against the grain of Finkelstein's argumentation, which rests on the assumption that tolls are higher precisely because they are less salient with electronic collection. 
+
 \clearpage 
 \section{Discussion \& Conclusion}
 This study does not exhaustively establish that randomly assigned changes in home prices make citizens more conservative or liberal. To show this, we would need experimental evidence that is not only practically unobtainable, but also theoretically so---especially given how property values are determined by an anonymous market and are thus not directly manipulable.
@@ -420,7 +423,6 @@ Note that the color scale for Figures \ref{colorgram_04} and \ref{colorgram_08} 
 \nocite{*}
 \bibliographystyle{acm}
 \end{singlespace}
-%bibliography is for MIT paper - must add citations from this paper. 
 %\printbibliography
 
 %To add to bibliography 
