--- a/Literature_Review.tex
+++ b/Literature_Review.tex
@@ -1,6 +1,6 @@
 \section{Literature Review}
-
-At least since the 1940s, social scientists have relied on survey research to understand the factors affecting voting behavior, yet only recently have scholars begun to use experimental and observational evidence to gain "causal leverage for analyses of voting behavior." \cite{bartels_larry_m._study_2010} Early studies of voting behavior established that although individual vote choice may vary greatly in response to electoral stimuli such as a popular presidential candidate or war-time discontent, an individual's typical voting behavior is a remarkably stable function of personal identity characteristics. \cite{ConverseNormalVote}. The most significant determinants of voting behavior according to this line of research include party identification, ethnicity, gender, age, religion, education, and occupation. (Lazerfeld1944,Berelson1954,) Noteworthy too are the factors these studies did \textit{not} find significant: preferences about political issues, for example, or economic self-interest. These results, which have been extensively replicated over the years (CITATION BLOCK), have nonetheless faced significant challenges in the past decade, and some of what we thought we knew about voting behavior is being upended. \cite{Ansolabehere_Snyder_Rodden} show that the apparent incoherence of individual issue attitudes may largely be a result of measurement error, and that by averaging multiple question responses one gets a more stable estimate of individual issue attitudes, which become nearly as predictive of voting behavior as partisan identification. Meanwhile, Gelman et al use WHAT KIND OF survey data to establish that income \textit{can} be an important determiner of individual vote behavior, but its predictive power depends greatly on geography: in poor states like Alabama those who make little vote very differently from those who make a lot, while in rich states like Connecticut the difference is barely present. The primary innovation of both these papers is that they make compelling arguments for the use of data analysis techniques not normally used within the strand of survey research concerned with voting behavior. Other recent papers have proposed to use entirely different data sources based on experimental or observational data. Hirsch and Nall, for example, use highly dis-aggregated registration, census, and election returns to build on the Gelman paper, showing that income is a significant determiner of voting behavior only in Congressional districts characterized by a high degree of racial diversity.  GREAT TO CITE AN EXPERIMENTAL PAPER BUILDING ON ANSOLABEHERE SNYDER RODDEN.
+At least since the 1940s, social scientists have relied on survey research to understand the factors affecting voting behavior, yet only recently have scholars begun to use experimental and observational evidence to gain ``causal leverage for analyses of voting behavior.''\cite{bartels_larry_m._study_2010} Early studies of voting behavior established that although individual vote choice may vary greatly in response to electoral stimuli such as a popular presidential candidate or war-time discontent, an individual's typical voting behavior is a remarkably stable function of personal identity characteristics. \cite{ConverseNormalVote}. The most significant determinants of voting behavior according to this line of research include party identification, ethnicity, gender, age, religion, education, and occupation. (Lazerfeld1944,Berelson1954,) Noteworthy too are the factors these studies did \textit{not} find significant: preferences about political issues, for example, or economic self-interest. These results, which have been extensively replicated over the years (CITATION BLOCK), have nonetheless faced significant challenges in the past decade, and some of what we thought we knew about voting behavior is being upended. \cite{Ansolabehere_Snyder_Rodden} show that the apparent incoherence of individual issue attitudes may largely be a result of measurement error, and that by averaging multiple question responses one gets a more stable estimate of individual issue attitudes, which become nearly as predictive of voting behavior as partisan identification. Meanwhile, Gelman et al use WHAT KIND OF survey data to establish that income \textit{can} be an important determiner of individual vote behavior, but its predictive power depends greatly on geography: in poor states like Alabama those who make little vote very differently from those who make a lot, while in rich states like Connecticut the difference is less evident. The primary innovation of both these papers is that they make compelling arguments for the use of data analysis techniques not normally used within the strand of survey research concerned with voting behavior. Other recent papers have proposed to use entirely different data sources based on experimental or observational data. Hirsch and Nall, for example, use highly dis-aggregated registration, census, and election returns to build on the Gelman paper, showing that income is a significant determiner of voting behavior only in Congressional districts characterized by a high degree of racial diversity. GREAT TO CITE AN EXPERIMENTAL PAPER BUILDING ON ANSOLABEHERE SNYDER RODDEN. Even so, in the cross-national literature, there is a degree of consensus that income is a significant predictor of political preferences, with income almost always having a negative effect on support for redistribution (see Svallfors (1997), Dion (2010), and Beramendi \& Rehm (2016)). 
 
 If the empirical literature on voting behavior has until recently tended to downrate the importance of individual economic context for voting behavior, the same is not true for the theoretical literature.
 
+Although empirical and theoretical work has most often focused on income as a predict of political preference, a new generation of scholars have examined wealth more broadly. This new generation has placed special attention on homeownership, since, after all, most Americans have the plurality of their net worth invested in their homes. For example, Ansell (2014) argues that, when homeowners experience house price appreciation, they will become less supportive of social insurance policies, for they use their houses ``as a form of self-supplied private insurance against job and income loss'' (p. 383). Ansell finds support for this claim using cross-national survey and social spending data. This presents a promising area of inquiry. Income has historically been the most frequently used proxy for one's command over resources because it is relatively easy to observe. However, wealth is perhaps a better measure of one's command over resources because it captures one's accumulated assets. It is also defined as a stock, not a flow so is perhaps less prone to year-to-year fluctuations. In the study of income and voting behavior, scholars such as Arunachalam \& Watson have used instrumental variables and other causal techniques to address unmeasured confounding that may be present in observational data. We see a contribution of our study to apply some of these same causal inference techniques to the study of the wealth-voting relationship. 
